--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>工位平面图</title>
 
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@latest/dist/plugins/css/pluginsCss.css' />
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@latest/dist/plugins/plugins.css' />
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@latest/dist/css/luckysheet.css' />
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/luckysheet@latest/dist/assets/iconfont/iconfont.css' />
-    <script src="https://cdn.jsdelivr.net/npm/luckysheet@latest/dist/plugins/js/plugin.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/luckysheet@latest/dist/luckysheet.umd.js"></script>
+    <link rel='stylesheet' href='./dist/plugins/css/pluginsCss.css' />
+    <link rel='stylesheet' href='./dist/plugins/plugins.css' />
+    <link rel='stylesheet' href='./dist/css/luckysheet.css' />
+    <link rel='stylesheet' href='./dist/assets/iconfont/iconfont.css' />
+    <script src="./dist/plugins/js/plugin.js"></script>
+    <script src="./dist/luckysheet.umd.js"></script>
     
     
   </head>
